Improve mobile usability for TOTP tool

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <button id="start-camera" class="secondary">开启摄像头</button>
           <button id="stop-camera" type="button" class="ghost" disabled>停止摄像头</button>
           <label class="file-btn">
-            <input type="file" id="upload" accept="image/*" />
+            <input type="file" id="upload" accept="image/*" capture="environment" />
             <span>上传二维码图片</span>
           </label>
           <p class="microcopy">提示：摄像头扫描时，将二维码置于取景框中央；上传图片时请确保包含完整二维码。</p>
